# bomi

./: .gitignore  CC0805MKX5R5BB476_C109461.md  CKCS4018-47uH_M_C354577.md  FNR4030S470MT_C167888.md  LICENSE  README.md  SN74AHCT1G125DBVR_C7484.md  SN74AHCT1G125DCKR_C350557.md  build_site.py  config.yaml.example  pyproject.toml  secrets.yaml.example  test_models.py
.github/workflows/: ci.yml  pages.yml
demo/: README.md  dev-notes.md  script.md
demo/generator/: cast_generator.py  make_agent_demo.py  record_all.py  scenes.yaml
demo/presentation/: index.html
docs/: bomi-api-internals.md  bomi-guide.md  examples.md  features.md  jlcpcb-api-internals.md  jlcpcb-tool-guide.md  project-feature-plan.md  rename-plan.md  review-issues.md  sqlite-database-guide.md
site/: examples.html  guide.html  index.html  vibe.html
site/assets/: style.css
site/presentation/: index.html
site/recordings/: scene-agent-bom-review.cast  scene-artifacts-and-git.cast  scene-compare-switch-options.cast  scene-inspect-driver.cast  scene-refine-validate.cast  scene-review-bom-status.cast  scene-search-core-parts.cast  scene-search-supporting-parts.cast  scene-select-bom-parts.cast  scene-setup-project.cast
src/bomi/: __init__.py  analysis.py  api.py  categories.py  cli.py  config.py  db.py  filters.py  models.py  output.py  (+4 more)
tests/: conftest.py  test_analysis.py  test_api.py  test_categories.py  test_cli.py  test_config.py  test_db.py  test_filters.py  test_models.py  test_normalize.py  test_output_bom.py  test_project.py  test_refs.py  test_scrape.py  test_search.py  test_units.py
(+29 files in other folders)
