[project]
name = "bomi"
version = "1.0.0"
description = "CLI tool for researching JLCPCB/LCSC electronic components"
license = { text = "MIT" }
authors = [
    { name = "Jeremy Seitz", email = "7750+somebox@users.noreply.github.com" },
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "pyyaml>=6.0",
    "tabulate>=0.9",
]

[project.scripts]
bomi = "bomi.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bomi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-recording>=0.13",
]
